fixed that sidebar collapsing bug... again

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -419,6 +419,7 @@ img {
 
 .toggle-open-container {
   padding-bottom: 0.5rem;
+  margin-top: 0.75rem;
 }
 
 .toggle-btn {
